@@ -74,6 +74,7 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <argLine>--enable-preview</argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>   
                 </configuration>
             </plugin>
         </plugins>
